--- a/AutoMocker/tests/AutoMocker.UnitTests/AutoMocker.UnitTests.csproj
+++ b/AutoMocker/tests/AutoMocker.UnitTests/AutoMocker.UnitTests.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="ComponentWithDependencies.cs" />
     <Compile Include="ComponentWithoutDependencies.cs" />
+    <Compile Include="CustomDependency.cs" />
     <Compile Include="IDependency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SutFactoryTests.cs" />
